# python-wagtail-localemiddleware

./: .editorconfig  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: python-package.yaml  python-release.yaml
src/labd/middleware/locale/: __init__.py
tests/: conftest.py  factories.py  fixtures.py  urls.py
tests/localemiddleware/: test_middleware.py
